Setup and first tutorial

--- a/README
+++ b/README
@@ -1,1 +1,43 @@
-We will keep track of code here for the lecture exercises as well as projects 
+## ML tutorials - UniGe Cosmology Group
+
+This repo contains tutorials for the ML meeting of the cosmology group at the University of Geneva
+
+### Basic setup for Apple/Mac computer with conda
+
+The requirements to run the jupyter notebooks are in the file requirements.txt. Have them installed ! 
+
+If you aer new to python/jupyter, follow the following instructions:
+
+* 
+Install [miniconda](https://conda.io/en/latest/miniconda.html)
+See the installation instructions [here](https://conda.io/projects/conda/en/latest/user-guide/install/).
+You may need to restart your computer after installation.
+
+* Download or clone the git repo: 
+```
+git clone https://github.com/nebblu/MLg.git
+```
+
+* Add the conda-forge channel 
+```conda config --add channels conda-forge```
+
+* Move into the directory with the git repo 
+```cd <dir_name>```
+
+* (Optional) Create an environment 
+```conda create --name <name> ```
+
+* Install the software 
+ 
+```
+conda install --name <name> --file requirements.txt 
+
+conda install --name <name> -c conda-forge jupyter 
+```
+(If you did not created a dedicated environment, skip the --name option)
+
+* (If you created a dedicated environment) Activate the environment 
+```conda activate odw2019```
+
+* Start the jupyter notebook server 
+```jupyter notebook```
